fixed spacing of the links for the item pages

--- a/src/components/Buttons/Buttons.scss
+++ b/src/components/Buttons/Buttons.scss
@@ -8,7 +8,7 @@
 .link-container {
   display: flex;
   flex-direction: row !important;
-  gap: 200px !important;
+  // gap: 200px !important;
   align-items: center;
   padding: 20px;
   border-radius: 8px;
